--- a/KarateKlubKlijent/src/form/FrmRezultatiPolaganja.form
+++ b/KarateKlubKlijent/src/form/FrmRezultatiPolaganja.form
@@ -69,7 +69,7 @@
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="lblSlika" pref="257" max="32767" attributes="0"/>
+                          <Component id="lblSlika" min="-2" pref="189" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="btnObrisi" pref="133" max="32767" attributes="0"/>
